Decreased font size; Fixed header brand text overlap issue; Made main content column slightly smaller

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -1,4 +1,4 @@
-$baseline-font-size: 16px;
+$baseline-font-size: 14px;
 $baseline-line-height: 1.61803rem;
 
 $serif-ff: 'Noto Sans',Arial,Helvetica Neue,Helvetica,sans-serif;
